# internal/publisher/router.go
@@ -33,6 +33,7 @@ func (s *Server) registerRoutes(mux *http.ServeMux) {
 	// Artifacts.
 	mux.HandleFunc("POST /publisher/v1/artifacts", s.requireScope(cicd, s.createArtifact))
 	mux.HandleFunc("POST /publisher/v1/artifacts/{uuid}/{version}/files", s.requireScope(cicd, s.uploadArtifactFile))
+	mux.HandleFunc("POST /publisher/v1/artifacts/{uuid}/{version}/signature/files", s.requireScope(cicd, s.uploadArtifactSignatureFile))
 	mux.HandleFunc("POST /publisher/v1/artifacts/{uuid}/{version}/evidence/prepare", s.requireScope(cicd, s.prepareArtifactEvidence))
 	mux.HandleFunc("POST /publisher/v1/artifacts/{uuid}/{version}/evidence", s.requireScope(cicd, s.submitArtifactEvidence))
 
